--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   background-color: rgba(128, 128, 128, 0.219);
 }
 
+h3 {
+  margin: 0;
+  background-color: rgba(0, 0, 255, 0.212);
+}
+
 .header {
   display: flex;
   justify-content: center;
